@@ -37,6 +37,7 @@ import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
 import java.util.ResourceBundle;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -126,7 +127,7 @@ public class GeneratorController implements Initializable {
                 .map(CheckBox::getUserData)
                 .filter(HashAlgorithm.class::isInstance)
                 .map(HashAlgorithm.class::cast)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @FXML
@@ -137,8 +138,9 @@ public class GeneratorController implements Initializable {
 
     @FXML
     private void moveTooltipWithMouse(MouseEvent event) {
-        if (!(event.getSource() instanceof Control control)) return;
+        if (!(event.getSource() instanceof Control)) return;
 
+        Control control = (Control) event.getSource();
         Tooltip tooltip = control.getTooltip();
         tooltip.setX(event.getScreenX() + 10);
         tooltip.setY(event.getScreenY() + 10);
@@ -164,7 +166,7 @@ public class GeneratorController implements Initializable {
 
     @FXML
     private void pasteContentFromDragAndDrop(DragEvent event) {
-        if (!(event.getSource() instanceof TextField field)) return;
+        if (!(event.getSource() instanceof TextField)) return;
 
         Dragboard dragboard = event.getDragboard();
 
@@ -172,6 +174,7 @@ public class GeneratorController implements Initializable {
                          ? dragboard.getFiles().get(0).getAbsolutePath()
                          : dragboard.getString();
 
+        TextField field = (TextField) event.getSource();
         field.setText(content);
     }
 
@@ -185,7 +188,7 @@ public class GeneratorController implements Initializable {
     private List<CheckBox> retrieveSelectedCheckBoxes() {
         return retrievePaneAlgorithmCheckBoxStream()
                 .filter(CheckBox::isSelected)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @FXML
@@ -236,7 +239,7 @@ public class GeneratorController implements Initializable {
     @SuppressWarnings("ConstantConditions")
     private void startSplash() {
         currentScene = paneRoot.getScene();
-        currentRoot = currentScene.getRoot();
+        currentRoot  = currentScene.getRoot();
 
         try {
             currentScene.setRoot(FXMLLoader.load(getClass().getResource("/hashtools/gui/screen/splash/Splash.fxml")));
